
=======================================================
            WanT code:  Log of Changes 
=======================================================


Apr 08 2010      gamma_only option spreaded to plot.x .
                 Test03 and Test04 updated. Overall documentation updated. 
                 Test13 finalized and added to repository. Test14 added. (AF)

Apr 07 2010      gamma_only option included in ccalbec. Test04 updated. 
                 Parallelism over kpt included in plot.x . (AF)

Apr 06 2010      Configure wrapper updated. Eigenchannel writing fixed. 
                 Bug fixed in the implementation of overlaps within gamma_only. 
                 Test03 and Test04 updated. (AF)

Apr 02 2010      Bug fixed in the write_eigchn procedure (conductor). 
                 Cleanup of the transport part. Test11 updated. 
                 nproc > nkpts allowed. (AF)

18 Mar 2010      configure.ac updated using todays QE cvs version. Changes to
                 makefile system (in particular related to the build_date var). 
                 ~want/install dir added. (AF)

16 Mar 2010      Portability on Sun f95 compiler added. (AF)

15 Mar 2010      iotk moved to extlibs. A number of related minor changes done. 
                 Version updated to 2.3.0 .(AF)

19 Jan 2010      erorr given when trying to use smearing and correlation
                 self-energies. The condition can be made looser (just avoid
                 non-hermitean self-energies), or the general case can be
                 implemented. (AF)
                 Bug fixed in embed when using dynamical self-energies to build
                 the lead self-energies. The same problem is still present in 
                 the transport part. (AF)

18 Jan 2010      Bug fixed in transport/kpoints.f90. It was affecting the
                 dumping of sgm lead data and embed. Pointed out by D. Prezzi. (AF)

22 Nov 2009      IOTK lib updated with today's CVS version. 